<resources>
    <string name="app_name">lab1_android</string>
    <string name="first_operand">First Operand</string>
    <string name="second_operand">Second Operand</string>
    <string name="result_is">Result is:</string>
    <string name="addition">Addition</string>
    <string name="multiplying">Multiplying</string>
    <string name="calculate">Calculate</string>
    <string name="radio_subtraction">Subtraction</string>
    <string name="radio_dividing">Dividing</string>
    <string name="go_forward">Go Forward</string>
    <string name="go_back">Go Back</string>
    <string name="history">History</string>
    <string name="change_fragment">Change Fragment</string>
    <string name="change_color">Change Color</string>
</resources>